test/fail/templatenotdefined.app
//Template with signature
//not defined

application test

section datamodel

  
  define page root(){
    "1"
    home2()
  }
  
